[package]
name = "multicast"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dashmap = "6.0.1"
paste = "1.0.15"
socket2 = "0.5.7"
thiserror = "1.0.63"
tracing = "0.1.40"
zerocopy = { version = "0.7.35", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = "0.3.18"
tracing-tape = { git = "https://github.com/soehrl/tracing-tape.git" }
