[package]
name = "camure"
version = "0.1.0"
authors = ["Simon Oehrl"]
edition = "2021"
description = "High-performance 1-to-many communication and synchronization primitives using UDP multicast."
readme = "README.md"
homepage = "https://github.com/soehrl/camure"
repository = "https://github.com/soehrl/camure"
license = "MIT/Apache-2.0"
keywords = ["reliable", "multicast", "broadcast", "synchronization", "udp"]
categories = ["network-programming", "concurrency"]

[dependencies]
ahash = "0.8.11"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dashmap = "6.0.1"
paste = "1.0.15"
socket2 = "0.5.7"
thiserror = "1.0.63"
tracing = "0.1.40"
zerocopy = { version = "0.7.35", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = "0.3.18"
